# ContrXT

./: .gitignore  CNAME  ContrXT Demo + Train Classifier.ipynb  ContrXT Demo.ipynb  README.md  _config.yml  requirements.txt  setup.cfg
docs/source/: conf.py  index.rst  usage.rst
installation/: pyeda-0.28.0-cp36-cp36m-win_amd64.whl  pyeda-0.28.0-cp39-cp39-win_amd64.whl
src/contrxt/: contrxt.py  explain.py  trace.py
src/contrxt/data/: data_manager.py  tabular_data_manager.py  text_data_manager.py
src/contrxt/surrogate/: fair_tree_surrogate.py  generic_surrogate.py  rulefit_surrogate.py  sklearn_surrogate.py
src/contrxt/util/: BDD2Text.py  helpers.py  logger.py
tests/: test_utils.py  tests_tabular.py  tests_text.py
tests/test_data/: df_time_1.csv  df_time_2.csv
