[metadata]
name = contrxt
version = 0.0.1
author = Andrea Seveso
author_email = andrea.seveso@unimib.it
description = ContrXT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Crisp-Unimib/ContrXT
project_urls =
    Bug Tracker = https://github.com/Crisp-Unimib/ContrXT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pandas
    pydot
    scikit-learn
    tqdm
    stopit
    graphviz
    matplotlib
    apyori
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src
